--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <nav class="main-menu main-menu-3 white">
                             <ul>
                                 <li class="active">
-                                    <a href="/">Home </a>
+                                    <a href="index.html">Home </a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Us </a>
