--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
                         <nav class="main-menu main-menu-3 white">
                             <ul>
                                 <li>
-                                    <a href="/">Home </a>
+                                    <a href="index.html">Home </a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Us </a>
