--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             <div class="row align-items-center no-gutters">
                 <div class="col-lg-2 col-md-5 col-sm-4 col-5">
                     <div class="logo transition-4">
-                        <a href="index.html">
+                        <a href="/">
                             <img src="img/mainImages/logo.png" class="transition-4" alt="logo">
                         </a>
                     </div>
@@ -79,7 +79,7 @@
                         <nav class="main-menu main-menu-3 white">
                             <ul>
                                 <li>
-                                    <a href="index.html">Home </a>
+                                    <a href="/">Home </a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Us </a>
@@ -452,7 +452,7 @@
                     <div class="footer-links pt-85 pt-md-50 mb-sm-70">
                         <h5 class="green f-700 mb-35">Quick Links</h5>
                         <ul class="links-list">
-                            <li><a href= "index.html">Home</a></li>
+                            <li><a href= "/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="career.html">Career</a></li>
