--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <nav class="main-menu main-menu-3 white">
                             <ul>
                                 <li class="active">
-                                    <a href="index.html">Home </a>
+                                    <a href="/">Home </a>
                                 </li>
                                 <li>
                                     <a href="about.html">About Us </a>
@@ -886,7 +886,7 @@
                     <div class="footer-links pt-85 pt-md-50 mb-sm-70">
                         <h5 class="green f-700 mb-35">Quick Links</h5>
                         <ul class="links-list">
-                            <li><a href= "index.html">Home</a></li>
+                            <li><a href= "/">Home</a></li>
                             <li><a href="about.html">About Us</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="career.html">Career</a></li>
