--- a/career.html
+++ b/career.html
@@ -9,7 +9,8 @@
     <meta name="robots" content="noindex">
 
     <!-- Calling Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="">
+
     <!-- Calling Favicon -->
     <!-- ********************* -->
     <!-- CSS files -->
@@ -90,8 +91,8 @@
                                 <li>
                                     <a href="services.html">Services </a>
                                 </li>
-                                <li>
-                                    <a href="career.html" class="active">career </a>
+                                <li class="active">
+                                    <a href="career.html">career </a>
                                 </li>
                                 <li>
                                     <a href="colleges.html">College </a>
@@ -156,7 +157,7 @@
                 <div class="col-lg-12">
                     <div class="fancy-head text-center relative z-5 mb-45 wow fadeInDown"
                         style="visibility: visible; animation-name: fadeInDown;">
-                        <h1 class=""><span class="green counter">100</span>+ Happy Clients</h1>
+                        <h1 class=""><span class="green counter">100</span>+ Happy Clients In India</h1>
                     </div>
                 </div>
             </div>
@@ -170,25 +171,12 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Graphic river Pvt Ltd</a></h5>
+                            <h5><a href="#">christ university
+                                </a></h5>
 
                         </div>
                     </div>
                 </div>
-
-                <div class="col-xl-3 col-lg-4 col-md-6">
-                    <div class="partner">
-                        <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/collegelogo2.jpg"
-                                alt="college icone">
-                        </div>
-                        <div class="partner-name">
-                            <h5><a href="#">Themeforest Pvt Ltd</a></h5>
-
-                        </div>
-                    </div>
-                </div>
-
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="partner">
                         <div class="partner-logo flex-center">
@@ -196,7 +184,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Audio jungle Pvt Ltd</a></h5>
+                            <h5><a href="#">Vydhehi Group Of Institutions</a></h5>
 
                         </div>
                     </div>
@@ -209,7 +197,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Themeforest Pvt Ltd</a></h5>
+                            <h5><a href="#">Presidency Group Of Institutions</a></h5>
 
                         </div>
                     </div>
@@ -222,7 +210,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Audiojungle Pvt Ltd</a></h5>
+                            <h5><a href="#">Ramaiah University</a></h5>
 
                         </div>
                     </div>
@@ -235,7 +223,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Videohive Pvt Ltd</a></h5>
+                            <h5><a href="#">Koshys Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -248,7 +237,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">HKBK Group Of Institutions</a></h5>
 
                         </div>
                     </div>
@@ -260,7 +249,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Rosy Royal Group Of Institutions</a></h5>
 
                         </div>
                     </div>
@@ -272,7 +261,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">East West Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -284,7 +274,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Themeforest Pvt Ltd</a></h5>
+                            <h5><a href="#">St. Joseph College
+                                </a></h5>
 
                         </div>
                     </div>
@@ -297,7 +288,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Audiojungle Pvt Ltd</a></h5>
+                            <h5><a href="#">Spurthy Group Of Institutions</a></h5>
 
                         </div>
                     </div>
@@ -310,7 +301,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Videohive Pvt Ltd</a></h5>
+                            <h5><a href="#">SIR MV INSTITUTE OF TECHNOLOGY</a></h5>
 
                         </div>
                     </div>
@@ -323,7 +314,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Reva University</a></h5>
 
                         </div>
                     </div>
@@ -336,7 +327,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">3Docean Pvt Ltd</a></h5>
+                            <h5><a href="#">RV Institutions</a></h5>
 
                         </div>
                     </div>
@@ -348,7 +339,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Don Bosco Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -360,7 +352,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Sea Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -372,19 +365,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-lg-4 col-md-6">
-                    <div class="partner">
-                        <div class="partner-logo flex-center">
-                            <img width="80px" height="80px" src="img/collegeslogos/collegelogo18.jpg"
-                                alt="college icone">
-                        </div>
-                        <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">MVM Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -396,7 +378,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Jain University</a></h5>
 
                         </div>
                     </div>
@@ -408,7 +390,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">East Point Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -420,7 +403,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Sea Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -432,7 +416,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#"> Saptagiri Institute Of Medical Science</a></h5>
 
                         </div>
                     </div>
@@ -444,7 +428,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">BGS &SJB Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -456,7 +441,8 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Akash Group Of Institutions
+                                </a></h5>
 
                         </div>
                     </div>
@@ -468,7 +454,7 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Krupanidhi Group Of Institutions</a></h5>
 
                         </div>
                     </div>
@@ -480,12 +466,35 @@
                                 alt="college icone">
                         </div>
                         <div class="partner-name">
-                            <h5><a href="#">Codecanyon Pvt Ltd</a></h5>
+                            <h5><a href="#">Acharya Group Of Institutions</a></h5>
 
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- <div class="row">
+                <div class="col-lg-12">
+                    <div class="fancy-head text-center relative z-5 mb-45 wow fadeInDown"
+                        style="visibility: visible; animation-name: fadeInDown;">
+                        <h1 class=""><span class="green counter">80</span>+ Happy Clients In Abroad</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-3 col-lg-4 col-md-6">
+                    <div class="partner">
+                        <div class="partner-logo flex-center">
+                            <img width="80px" height="80px" src="img/collegeslogos/collegelogo1.jpg"
+                                alt="college icone">
+                        </div>
+                        <div class="partner-name">
+                            <h5><a href="#">christ university
+                                </a></h5>
+
+                        </div>
+                    </div>
+                </div>
+            </div> -->
 
             <div class="row">
                 <div class="col-12">
